fullSandbox11072023/force-app/main/default/objects/Customer_Master_Reference__c/Customer_Master_Reference__c.object-meta.xml
<CustomObject>
    <label>Customer Master Reference</label>
    <nameField>
        <label>Customer Master Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Master Reference</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>