fullSandbox11072023/force-app/main/default/objects/Customer_Master_Reference__c/fields/Account_Group_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_Formula__c</fullName>
    <formula>IF(Account_Group__c = &quot;Z001&quot;,&quot;Sold-To (Z001)&quot;, 
IF(Account_Group__c = &quot;Z002&quot;,&quot;Ship-To (Z002)&quot;, 
IF(Account_Group__c = &quot;ZREB&quot;,&quot;Indirect (ZREB)&quot;, 
IF(Account_Group__c = &quot;ZTSP&quot;,&quot;Territory (ZTSP)&quot;, 
IF(Account_Group__c = &quot;ZTSY&quot;,&quot;Territory (ZTSY)&quot;, 
&quot;&quot; 
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Group</label>
    <type>Text</type>
</CustomField>