fullSandbox11072023/force-app/main/default/objects/Customer_Master_Reference__c/fields/Last_SAP_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_SAP_Update__c</fullName>
    <label>Last SAP Update</label>
    <type>DateTime</type>
</CustomField>