fullSandbox11072023/force-app/main/default/objects/Customer_Master_Reference__c/fields/zBlock__c.field-meta.xml
<CustomField>
    <fullName>zBlock__c</fullName>
    <label>zBlock</label>
    <length>2</length>
    <type>Text</type>
</CustomField>