fullSandbox11072023/force-app/main/default/objects/Customer_Master_Reference__c/fields/zBlock_Formula__c.field-meta.xml
<CustomField>
    <fullName>zBlock_Formula__c</fullName>
    <formula>CASE(zBlock__c, 
&quot;00&quot;, &quot;Active&quot;, 
&quot;01&quot;, &quot;Credit Block&quot;,
&quot;02&quot;, &quot;Overall Block&quot;,
&quot;Z1&quot;, &quot;Pending Deletion&quot;,
&quot;Z2&quot;, &quot;Finance Block&quot;,
&quot;Z3&quot;, &quot;Pending Review&quot;,
&quot;ERROR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>zBlock</label>
    <type>Text</type>
</CustomField>